--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Gofood - App</title>
+    <title>GoFood - App</title>
   </head>
   <body>
     <div id="root"></div>
